--- a/BACKEND WEB DEVELOPMENT/Latihan/ex4/package.json
+++ b/BACKEND WEB DEVELOPMENT/Latihan/ex4/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex4",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,9 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
